fixed overflow bug in footer✨✨

--- a/src/styles/BeliefsAndBlogs.module.css
+++ b/src/styles/BeliefsAndBlogs.module.css
@@ -26,11 +26,20 @@
 @media (max-width: 1263px) {
   .content--container {
     padding-inline: 48px;
+    max-width: 900px;
   }
 }
 
 @media (max-width: 1024px) {
   .container {
     padding-block: 80px;
+  }
+}
+
+@media (max-width: 600px) {
+  .content--container {
+    padding-inline: 0px;
+
+    max-width: 100vw;
   }
 }
